Swapping local and title in toc
Does this change how it appears?

--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -29,8 +29,8 @@
       title: Carbon Emissions
     - local: models-gated
       title: Gated models
-    - title: Model Card Guidebook
-      local: model-card-guidebook
+    - local: model-card-guidebook
+      title: Model Card Guidebook
       sections:
       - local: model-card-annotated
         title: Annotated Model Card
