--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -36,6 +36,9 @@
         title: Annotated Model Card
       - local: model-cards-user-studies
         title: User Study
+      - local: model-card-appendix
+        title: Appendix
+        
   - local: models-uploading
     title: Uploading Models
   - local: models-downloading
