--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -25,20 +25,14 @@
   - local: model-cards
     title: Model Cards
     sections:
+    - local: model-card-annotated
+      title: Annotated Model Card
     - local: model-cards-co2
       title: Carbon Emissions
-    - local: models-gated
-      title: Gated models
     - local: model-card-guidebook
       title: Model Card Guidebook
-      sections:
-      - local: model-card-annotated
-        title: Annotated Model Card
-      - local: model-cards-user-studies
-        title: User Study
-      - local: model-card-appendix
-        title: Appendix
-        
+  - local: models-gated
+    title: Gating models
   - local: models-uploading
     title: Uploading Models
   - local: models-downloading
