--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -31,6 +31,12 @@
       title: Carbon Emissions
     - local: model-card-guidebook
       title: Model Card Guidebook
+    - local: model-card-landscape-analysis
+      title: MC Guidebook: Landscape Analysis
+    - local: model-cards-user-studies
+      title: MC Guidebook: User Studies
+    - local: model-card-appendix
+      title: MC Guidebook: Appendix
   - local: models-gated
     title: Gating models
   - local: models-uploading
