--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -34,7 +34,7 @@
     - local: model-card-landscape-analysis
       title: Landscape Analysis 
   - local: models-gated
-    title: Gating models
+    title: Gated models
   - local: models-uploading
     title: Uploading Models
   - local: models-downloading
