--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -34,7 +34,7 @@
     - local: model-card-landscape-analysis
       title: Landscape Analysis 
   - local: models-gated
-    title: Gated models
+    title: Gating models
   - local: models-uploading
     title: Uploading Models
   - local: models-downloading
@@ -129,8 +129,17 @@
     title: Streamlit Spaces
   - local: spaces-sdks-static
     title: Static HTML Spaces
+  - local: spaces-sdks-docker
+    title: Docker Spaces
+    sections:
+      - local: spaces-sdks-docker-first-demo
+        title: Your first Docker Spaces
+      - local: spaces-sdks-docker-examples
+        title: Example Docker Spaces
   - local: spaces-sdks-python
     title: Custom Python Spaces
+  - local: spaces-embed
+    title: Embed your Space
   - local: spaces-config-reference
     title: Spaces Configuration Reference
   - local: spaces-changelog
