Begin Preparing Model Card Guidebook content. (#545)
* Begin adding Model Card Guidebook material.

We'll be adding:
- An annotated model card
- The literature review/landscape analysis
- The user study
- An overall context that provides links to each as a "Guidebook"

* Formatting.

* Moving stuff around a bit.

* Adding summary tag

* Adds results_summary tag.

* variable name change.

* Create init

* Image for Guidebook

* Delete init

* Update docs/hub/_toctree.yml

* Update docs/hub/model-card-annotated.md

Co-authored-by: Julien Chaumond <julien@huggingface.co>

* add missing page

* Changing variable name appearnce

* get_started_code

Oops! Forgot this variable.

* Update docs/hub/model-card-annotated.md

Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>

* Update docs/hub/model-card-annotated.md

Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>

* Update docs/hub/model-card-annotated.md

Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>

* updating guidebook intro

* images for the user studies chapter

* user studies markdown file

* adding user studies to _toctree

* fixing spacing

* Swapping local and title in toc

Does this change how it appears?

* Trying to unbreak the TOC

* fixing bold text

* added appendix

* adding appendix

* fixing spacing

* spacing

* Playing with navbar.

* images for landscape analysis

* landscape analysis

* playing with toctree

* tree updates to fix : problem

* adding in footnotes

* fixing links

* fixing links p2

* trying out the toctree patch

* trying out the toctree patch 2: to fix next doc opition

* incorperating marissa's suggestins

* reverting toctree changes

* adding link to other docs at the end

* adding in link to appendix

* Update docs/hub/_toctree.yml

Co-authored-by: Julien Chaumond <julien@huggingface.co>

* adding in back the deletions

* temp removal of pdf until we d

--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -25,10 +25,16 @@
   - local: model-cards
     title: Model Cards
     sections:
+    - local: model-card-annotated
+      title: Annotated Model Card
     - local: model-cards-co2
       title: Carbon Emissions
-    - local: models-gated
-      title: Gated models
+    - local: model-card-guidebook
+      title: Model Card Guidebook
+    - local: model-card-landscape-analysis
+      title: Landscape Analysis 
+  - local: models-gated
+    title: Gated Models
   - local: models-uploading
     title: Uploading Models
   - local: models-downloading
