Adding docs for PaddleNLP (#535)
* wip

* wip

* ready for review

* add summarization

* Apply suggestions from code review

Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>

* address comments

* add images context

Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>
Co-authored-by: Radames Ajna <radamajna@gmail.com>

--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -58,6 +58,8 @@
         title: Keras
       - local: ml-agents
         title: ML-Agents
+      - local: paddlenlp
+        title: PaddleNLP
       - local: rl-baselines3-zoo
         title: RL-Baselines3-Zoo
       - local: sample-factory
