--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -138,6 +138,8 @@
         title: Your first Docker Spaces
       - local: spaces-sdks-docker-examples
         title: Example Docker Spaces
+      - local: spaces-sdks-docker-argilla
+        title: Argilla on Spaces
   - local: spaces-embed
     title: Embed your Space
   - local: spaces-config-reference
