add webhook guide for metada review to TOC

--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -19,6 +19,8 @@
         title: "How-to: Automatic fine-tuning with Auto-Train"
       - local: webhooks-guide-discussion-bot
         title: "How-to: Build a Discussion bot based on BLOOM"
+      - local: webhooks-guide-metadata-review
+        title: "How-to: Create automatic metadata quality reports"
   - local: repositories-next-steps
     title: Next Steps
   - local: repositories-licenses
