--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -42,6 +42,10 @@
       title: Model Card Guidebook
     - local: model-card-landscape-analysis
       title: Landscape Analysis 
+    - local: model-cards-user-studies
+      title: User studies 
+    - local: model-card-appendix
+      title: Appendix
   - local: models-gated
     title: Gated Models
   - local: models-uploading
