--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,16 +1,7 @@
 {
-	"singleQuote": true,
-	"useTabs": true,
-	"overrides": [
-		{
-			"files": [
-				"*.json"
-			],
-			"options": {
-				"singleQuote": false
-			}
-		}
-	],
 	"printWidth": 120,
-	"tabWidth": 2
+	"quoteProps": "consistent",
+	"singleQuote": false,
+	"tabWidth": 2,
+	"useTabs": true
 }
