Add Label Studio Documentation (#746)
* Add documentation for Label Studio Spaces

Adds documentation for Label Studio in Spaces, including how to
configure the space as a prodution annotation platform

* Add Label Studio documentation to the table of contents

* Apply suggestions from code review

Apply suggested changes

Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>

* Apply additional suggestion

---------

Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>

--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -149,6 +149,8 @@
         title: Example Docker Spaces
       - local: spaces-sdks-docker-argilla
         title: Argilla on Spaces
+      - local: spaces-sdks-docker-label-studio
+        title: Label Studio on Spaces
       - local: spaces-sdks-docker-aim
         title: Aim on Spaces
       - local: spaces-sdks-docker-livebook
