--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -157,6 +157,8 @@
         title: Aim on Spaces
       - local: spaces-sdks-docker-livebook
         title: Livebook on Spaces
+      - local: spaces-sdks-docker-shiny
+        title: Shiny on Spaces
       - local: spaces-sdks-docker-zenml
         title: ZenML on Spaces
   - local: spaces-embed
