Secrets Scanning (under security)

--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -182,8 +182,6 @@
       title: Custom Python Spaces
     - local: spaces-add-to-arxiv
       title: How to Add a Space to ArXiv
-    - local: spaces-secrets-scanner
-      title: Secrets Scanner
 - local: other
   title: Other
   isExpanded: true
@@ -212,6 +210,8 @@
       title: Malware Scanning
     - local: security-pickle
       title: Pickle Scanning
+    - local: security-secrets
+      title: Secrets Scanning
   - local: paper-pages
     title: Paper Pages
   - local: doi
