Document `Spaces Secrets Scanner` (#779)
* Document `Spaces Secrets Scanner`

* Update docs/hub/spaces-secrets-scanner.md

Co-authored-by: Victor Muštar <victor.mustar@gmail.com>

* Secrets Scanning (under security)

---------

Co-authored-by: Victor Muštar <victor.mustar@gmail.com>

--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -210,6 +210,8 @@
       title: Malware Scanning
     - local: security-pickle
       title: Pickle Scanning
+    - local: security-secrets
+      title: Secrets Scanning
   - local: paper-pages
     title: Paper Pages
   - local: doi
