Link to ./moderation page

--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -212,6 +212,8 @@
       title: Pickle Scanning
     - local: security-secrets
       title: Secrets Scanning
+  - local: moderation
+    title: Moderation
   - local: paper-pages
     title: Paper Pages
   - local: doi
