--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -41,7 +41,7 @@
     - local: model-card-guidebook
       title: Model Card Guidebook
     - local: model-card-landscape-analysis
-      title: Landscape Analysis 
+      title: Landscape Analysis
   - local: models-gated
     title: Gated Models
   - local: models-uploading
@@ -177,11 +177,13 @@
     - local: spaces-more-ways-to-create
       title: More ways to create Spaces
     - local: spaces-github-actions
-      title: Managing Spaces with Github Actions 
+      title: Managing Spaces with Github Actions
     - local: spaces-sdks-python
       title: Custom Python Spaces
     - local: spaces-add-to-arxiv
       title: How to Add a Space to ArXiv
+    - local: spaces-cookie-limitations.md
+      title: Cookie limitations in Spaces
 - local: other
   title: Other
   isExpanded: true
