Fix doc build delete doc comment workflows

--- a/.github/workflows/delete_doc_comment.yml
+++ b/.github/workflows/delete_doc_comment.yml
@@ -2,7 +2,7 @@ name: Delete doc comment
 
 on:
   workflow_run:
-    workflows: ["Delete doc comment trigger", "Delete sagemaker doc comment"]
+    workflows: ["Delete doc comment trigger", "Delete sagemaker doc comment trigger"]
     types:
       - completed
 
