Add Transformers.js as a supported library

--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -89,6 +89,8 @@
         title: TensorBoard
       - local: timm
         title: timm
+      - local: transformers-js
+        title: Transformers.js
   - local: models-widgets
     title: Model Widgets
     sections:
