--- a/.github/workflows/manual_lint.yml
+++ b/.github/workflows/manual_lint.yml
@@ -19,7 +19,10 @@ jobs:
   manual_lint:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+        with:
+          ref: $GITHUB_REF
+      - run: git log -1
       - name: Use Node.js ${{ env.node_version }}
         uses: actions/setup-node@v2
         with:
