✨ Spaces persistent storage (#846)
* ✨ Spaces persistent storage

* Update docs/hub/spaces-storage.md

Co-authored-by: christophe-rannou <christophe@huggingface.co>

* Apply suggestions from code review

Co-authored-by: Michelle Habonneau <83347449+Michellehbn@users.noreply.github.com>

* Apply suggestions from code review

Co-authored-by: Michelle Habonneau <83347449+Michellehbn@users.noreply.github.com>

* Apply suggestions from code review

Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>

* 📝 Add some docs in other sections

* unrelated but clearer

* wording tweak

* tweak

* minor tweak

---------

Co-authored-by: christophe-rannou <christophe@huggingface.co>
Co-authored-by: Michelle Habonneau <83347449+Michellehbn@users.noreply.github.com>
Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>
Co-authored-by: Julien Chaumond <julien@huggingface.co>

--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -138,6 +138,8 @@
       title: Using Spaces for Organization Cards
   - local: spaces-gpus
     title: Spaces GPU Upgrades
+  - local: spaces-storage
+    title: Spaces Persistent Storage
   - local: spaces-sdks-gradio
     title: Gradio Spaces
   - local: spaces-sdks-streamlit
