--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -167,6 +167,8 @@
         title: ZenML on Spaces
       - local: spaces-sdks-docker-panel
         title: Panel on Spaces
+      - local: spaces-sdks-docker-chatui
+        title: Your own Hugging Chat on Spaces
   - local: spaces-embed
     title: Embed your Space
   - local: spaces-run-with-docker
