changed title and toctree

--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -168,7 +168,7 @@
       - local: spaces-sdks-docker-panel
         title: Panel on Spaces
       - local: spaces-sdks-docker-chatui
-        title: Your own Hugging Chat on Spaces
+        title: ChatUI on Spaces
   - local: spaces-embed
     title: Embed your Space
   - local: spaces-run-with-docker
