📝 Document external apps

--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -232,3 +232,5 @@
     title: Digital Object Identifier (DOI)
   - local: api
     title: Hub API Endpoints
+  - local: oauth
+    title: Sign in with Hugging Face
