--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -218,6 +218,8 @@
     title: Moderation
   - local: paper-pages
     title: Paper Pages
+  - local: search
+    title: Search
   - local: doi
     title: Digital Object Identifier (DOI)
   - local: api
