Create search.md (#842)
* Create search.md

@mishig25 do you mind taking a look and adding more info please, if needed? I was thinking to add this as a section under "Other" since it spans models, datasets, spaces - wdyt?

* Update docs/hub/search.md

Co-authored-by: Julien Chaumond <julien@huggingface.co>

* Update search.md

updated images

* Update search.md

Removed line per Omar's recommendation

* add direct link

* add more desciprion on the filtering

* Add search page to toctree

---------

Co-authored-by: Julien Chaumond <julien@huggingface.co>
Co-authored-by: Mishig Davaadorj <dmishig@gmail.com>

--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -226,6 +226,8 @@
     title: Moderation
   - local: paper-pages
     title: Paper Pages
+  - local: search
+    title: Search
   - local: doi
     title: Digital Object Identifier (DOI)
   - local: api
