--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -175,6 +175,8 @@
     title: Run Spaces with Docker
   - local: spaces-config-reference
     title: Spaces Configuration Reference
+  - local: spaces-oauth
+    title: Sign-In with HF button
   - local: spaces-changelog
     title: Spaces Changelog
   - local: spaces-advanced
@@ -232,3 +234,5 @@
     title: Digital Object Identifier (DOI)
   - local: api
     title: Hub API Endpoints
+  - local: oauth
+    title: Sign in with Hugging Face
