--- a/js/package.json
+++ b/js/package.json
@@ -21,7 +21,7 @@
 		"postcss": "^8.4.16",
 		"postcss-load-config": "^3.0.1",
 		"prettier": "2.3.0",
-		"prettier-plugin-svelte": "^2.10.1",
+		"prettier-plugin-svelte": "2.3.0",
 		"svelte": "^3.59.2",
 		"svelte-check": "^2.0.0",
 		"svelte-preprocess": "^4.0.0",
