--- a/js/package.json
+++ b/js/package.json
@@ -7,8 +7,8 @@
 		"preview": "svelte-kit preview",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --check --plugin-search-dir=. .",
-		"format": "prettier --write --plugin-search-dir=. .",
+		"lint": "prettier --check src && eslint --ext .js,.mjs,.ts,.svelte src",
+		"format:all": "prettier --write src && eslint --quiet --fix --ext .js,.mjs,.ts,.svelte src",
 		"export-task": "tsm src/scripts/export-tasks.ts"
 	},
 	"devDependencies": {
@@ -18,10 +18,17 @@
 		"@tailwindcss/line-clamp": "^0.4.0",
 		"@types/tailwindcss": "^2.2.1",
 		"autoprefixer": "^10.4.8",
+		"eslint": "^8.43.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-github": "^4.3.5",
+		"eslint-plugin-import": "^2.25.4",
+		"eslint-plugin-svelte": "^2.15.0",
+		"eslint-plugin-unused-imports": "^2.0.0",
 		"postcss": "^8.4.16",
 		"postcss-load-config": "^3.0.1",
 		"prettier": "2.3.0",
-		"prettier-plugin-svelte": "2.3.0",
+		"prettier-plugin-svelte": "^2.10.1",
+		"prettier-plugin-tailwindcss": "^0.3.0",
 		"svelte": "^3.59.2",
 		"svelte-check": "^2.0.0",
 		"svelte-preprocess": "^4.0.0",
