--- a/js/tsconfig.json
+++ b/js/tsconfig.json
@@ -1,18 +1,15 @@
 {
 	"compilerOptions": {
-		"moduleResolution": "node",
-		"module": "es2020",
-		"lib": ["es2020"],
-		"target": "es2019",
-		"isolatedModules": true,
-		"resolveJsonModule": true,
+		"target": "es2022",
+		"module": "commonjs",
+		"outDir": "dist/",
 		"sourceMap": true,
-		"esModuleInterop": true,
-		"skipLibCheck": true,
-		"forceConsistentCasingInFileNames": true,
-		"baseUrl": ".",
-		"allowJs": true,
-		"checkJs": true
-	},
-	"include": ["src/**/*.d.ts", "src/**/*.js", "src/**/*.ts", "src/**/*.svelte"]
+		"alwaysStrict": true,
+		"noImplicitOverride": true,
+		"strictFunctionTypes": true,
+		"strictNullChecks": true,
+		"strictBindCallApply": true,
+		"experimentalDecorators": true,
+		"resolveJsonModule": true
+	}
 }
