Add `ctransformers` library

--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -59,6 +59,8 @@
         title: AllenNLP
       - local: asteroid
         title: Asteroid
+      - local: ctransformers
+        title: CTransformers
       - local: espnet
         title: ESPnet
       - local: fastai
