--- a/js/package.json
+++ b/js/package.json
@@ -20,6 +20,8 @@
 		"@tailwindcss/forms": "^0.4.1",
 		"@tailwindcss/line-clamp": "^0.4.0",
 		"@types/tailwindcss": "^2.2.1",
+		"@typescript-eslint/eslint-plugin": "^5.59.11",
+		"@typescript-eslint/parser": "^5.59.11",
 		"autoprefixer": "^10.4.8",
 		"eslint": "^8.43.0",
 		"eslint-config-prettier": "^8.3.0",
@@ -38,7 +40,7 @@
 		"tailwindcss": "^3.1.8",
 		"tslib": "^2.0.0",
 		"tsm": "^2.2.2",
-		"typescript": "^4.6.3"
+		"typescript": "^5.1.3"
 	},
 	"type": "module"
 }
