--- a/js/tsconfig.json
+++ b/js/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"compilerOptions": {
 		"target": "es2022",
-		"module": "commonjs",
+		"module": "es2022",
 		"outDir": "dist/",
 		"sourceMap": true,
 		"alwaysStrict": true,
@@ -9,7 +9,6 @@
 		"strictFunctionTypes": true,
 		"strictNullChecks": true,
 		"strictBindCallApply": true,
-		"experimentalDecorators": true,
-		"resolveJsonModule": true
+		"experimentalDecorators": true
 	}
 }
