--- a/.github/workflows/js-check-tests.yml
+++ b/.github/workflows/js-check-tests.yml
@@ -21,7 +21,7 @@ jobs:
         uses: tj-actions/changed-files@v35
         with:
           diff_relative: true
-          path: "server"
+          path: "js"
           files: |
             **/*.ts
             **/*.js
