--- a/.github/workflows/js-check-tests.yml
+++ b/.github/workflows/js-check-tests.yml
@@ -16,6 +16,17 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
+      - name: Get changed files
+        id: changed-files
+        uses: tj-actions/changed-files@v35
+        with:
+          diff_relative: true
+          path: "js"
+          files: |
+            **/*.ts
+            **/*.js
+            **/*.mjs
+            **/*.svelte
       - name: Use Node.js
         uses: actions/setup-node@v1
         with:
@@ -26,8 +37,15 @@ jobs:
       - name: Check style
         working-directory: js
         run: |
-          npx prettier --check src
-          npx eslint --quiet --ext .js,.mjs,.ts,.svelte src
+          if [ -z "${{ steps.changed-files.outputs.all_changed_files }}" ]
+          then
+            echo "no changed files to test"
+          else
+            npm run prettier ${{ steps.changed-files.outputs.all_changed_files }};
+            npm run lint ${{ steps.changed-files.outputs.all_changed_files }};
+            git diff | head -n 100;
+            git diff --name-only --exit-code
+          fi
       - name: Check svelte
         working-directory: js
         run: |
