why two different way to write this?

--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -237,4 +237,4 @@
   - local: api
     title: Hub API Endpoints
   - local: oauth
-    title: Sign in with Hugging Face
+    title: Sign-In with HF
