--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -171,6 +171,8 @@
         title: Panel on Spaces
       - local: spaces-sdks-docker-chatui
         title: ChatUI on Spaces
+      - local: spaces-sdks-docker-tabby
+        title: Tabby on Spaces
   - local: spaces-embed
     title: Embed your Space
   - local: spaces-run-with-docker
