Move repo size limitations to Hub docs (#949)
* Move repo size limitations to Hub docs

* feedback comment

* feedback

* add more links in the content section

--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -23,6 +23,8 @@
         title: "How-to: Build a Discussion bot based on BLOOM"
       - local: webhooks-guide-metadata-review
         title: "How-to: Create automatic metadata quality reports"
+  - local: repositories-recommendations
+    title: Repository size recommendations
   - local: repositories-next-steps
     title: Next Steps
   - local: repositories-licenses
