--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -226,9 +226,9 @@
       title: Single Sign-On (SSO)
       sections:
       - local: security-sso-okta-oidc
-        title: How to configure OIDC Okta in the Hub
+        title: How to configure OIDC with Okta in the Hub
       - local: security-sso-okta-saml
-        title: How to configure SAML Okta in the Hub
+        title: How to configure SAML with Okta in the Hub
     - local: security-malware
       title: Malware Scanning
     - local: security-pickle
