--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -224,6 +224,11 @@
       title: Signing Commits with GPG
     - local: security-sso
       title: Single Sign-On (SSO)
+      sections:
+      - local: security-sso-okta-oidc
+        title: How to configure OIDC with Okta in the Hub
+      - local: security-sso-okta-saml
+        title: How to configure SAML with Okta in the Hub
     - local: security-malware
       title: Malware Scanning
     - local: security-pickle
