--- a/.github/workflows/js-interfaces-tests.yml
+++ b/.github/workflows/js-interfaces-tests.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Check that code compiles
         working-directory: ./js/src/lib/interfaces
         run: |
-          time npx tsc *.ts --lib es6,es2016,es2017,es2018,es2022,esnext --target es2022 --module commonjs --outDir dist
+          time npx tsc *.ts --lib es6,es2016,es2017,es2018,esnext --target es2018 --module commonjs --outDir dist
       - name: Run export-tasks script
         working-directory: js
         run: |
