--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -57,6 +57,8 @@
     sections:
       - local: transformers
         title: 🤗 transformers
+      - local: diffusers
+        title: 🧨 diffusers
       - local: adapter-transformers
         title: Adapter Transformers
       - local: allennlp
