minimize the use of emojis

--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -58,7 +58,7 @@
       - local: transformers
         title: 🤗 transformers
       - local: diffusers
-        title: 🧨 diffusers
+        title: Diffusers
       - local: adapter-transformers
         title: Adapter Transformers
       - local: allennlp
