add entry about diffusers (#984)
* add entry about diffusers

* Update diffusers.md

* Apply suggestions from code review

Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>
Co-authored-by: Pedro Cuenca <pedro@huggingface.co>

* minimize the use of emojis

---------

Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>
Co-authored-by: Pedro Cuenca <pedro@huggingface.co>

--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -57,6 +57,8 @@
     sections:
       - local: transformers
         title: 🤗 transformers
+      - local: diffusers
+        title: Diffusers
       - local: adapter-transformers
         title: Adapter Transformers
       - local: allennlp
