docs: add Flair overview page to toc

--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -69,6 +69,8 @@
         title: ESPnet
       - local: fastai
         title: fastai
+      - local: flair
+        title: Flair
       - local: keras
         title: Keras
       - local: ml-agents
