--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -126,7 +126,24 @@
   - local: datasets-gated
     title: Gated Datasets
   - local: datasets-adding
-    title: Adding a new Dataset
+    title: Uploading Datasets
+  - local: datasets-adding
+    title: Uploading Datasets
+  - local: datasets-downloading
+    title: Downloading Datasets
+  - local: datasets-libraries
+    title: Integrated Libraries
+    sections:
+      - local: datasets-dask
+        title: Dask
+      - local: datasets-usage
+        title: Datasets
+      - local: datasets-duckdb
+        title: DuckDB
+      - local: datasets-pandas
+        title: Pandas
+      - local: datasets-webdataset
+        title: WebDataset
   - local: datasets-viewer
     title: Dataset Viewer
     sections:
@@ -140,19 +157,6 @@
     sections:
       - local: datasets-manual-configuration
         title: Manual Configuration
-  - local: datasets-libraries
-    title: Libraries
-    sections:
-      - local: datasets-dask
-        title: Dask
-      - local: datasets-usage
-        title: Datasets
-      - local: datasets-duckdb
-        title: DuckDB
-      - local: datasets-pandas
-        title: Pandas
-      - local: datasets-webdataset
-        title: WebDataset
 - local: spaces
   title: Spaces
   isExpanded: true
