add gallery component doc

--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -46,6 +46,8 @@
       title: Model Card Guidebook
     - local: model-card-landscape-analysis
       title: Landscape Analysis
+    - local: model-cards-components
+      title: Card Components
   - local: models-gated
     title: Gated Models
   - local: models-uploading
