--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -127,12 +127,35 @@
     title: Dataset Cards
   - local: datasets-gated
     title: Gated Datasets
+  - local: datasets-adding
+    title: Uploading Datasets
+  - local: datasets-downloading
+    title: Downloading Datasets
+  - local: datasets-libraries
+    title: Integrated Libraries
+    sections:
+      - local: datasets-dask
+        title: Dask
+      - local: datasets-usage
+        title: Datasets
+      - local: datasets-duckdb
+        title: DuckDB
+      - local: datasets-pandas
+        title: Pandas
+      - local: datasets-webdataset
+        title: WebDataset
   - local: datasets-viewer
     title: Dataset Viewer
-  - local: datasets-usage
-    title: Using Datasets
-  - local: datasets-adding
-    title: Adding New Datasets
+    sections:
+      - local: datasets-viewer-configure
+        title: Configure the Dataset Viewer
+  - local: datasets-data-files-configuration
+    title: Data files Configuration
+    sections:
+      - local: datasets-file-names-and-splits
+        title: File names and splits
+      - local: datasets-manual-configuration
+        title: Manual Configuration
 - local: spaces
   title: Spaces
   isExpanded: true
