--- a/tasks/package.json
+++ b/tasks/package.json
@@ -1,16 +1,16 @@
 {
 	"name": "@huggingface/tasks",
-	"version": "0.0.2",
+	"version": "0.0.3",
 	"type": "module",
 	"description": "A library of tasks for the Hugging Face Hub",
-	"main": "./dist/index.js",
-	"module": "./dist/index.mjs",
+	"main": "./dist/index.cjs",
+	"module": "./dist/index.js",
 	"types": "./dist/index.d.ts",
 	"exports": {
 		".": {
 			"types": "./dist/index.d.ts",
-			"require": "./dist/index.js",
-			"import": "./dist/index.mjs"
+			"require": "./dist/index.cjs",
+			"import": "./dist/index.js"
 		}
 	},
 	"scripts": {
