--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -108,6 +108,8 @@
         title: Widget Examples
   - local: models-inference
     title: Inference API docs
+  - local: models-download-stats
+    title: Models Download Stats
   - local: models-faq
     title: Frequently Asked Questions
   - local: models-advanced
@@ -156,8 +158,8 @@
         title: File names and splits
       - local: datasets-manual-configuration
         title: Manual Configuration
-  - local: datasets-faq
-    title: Frequently Asked Questions
+  - local: datasets-download-stats
+    title: Datasets Download Stats
 - local: spaces
   title: Spaces
   isExpanded: true
