Add docs on download stats (#1108)
* Add docs on download stats

* Destroy the wall

* Apply suggestions from code review

Co-authored-by: Daniel van Strien <davanstrien@users.noreply.github.com>
Co-authored-by: Julien Chaumond <julien@huggingface.co>

* Move to their own sections

* Open source all the way

* Update order and add to index

* Update datasets-download-stats.md

* Update models-download-stats.md

---------

Co-authored-by: Daniel van Strien <davanstrien@users.noreply.github.com>
Co-authored-by: Julien Chaumond <julien@huggingface.co>

--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -108,6 +108,8 @@
         title: Widget Examples
   - local: models-inference
     title: Inference API docs
+  - local: models-download-stats
+    title: Models Download Stats
   - local: models-faq
     title: Frequently Asked Questions
   - local: models-advanced
@@ -149,6 +151,8 @@
     sections:
       - local: datasets-viewer-configure
         title: Configure the Dataset Viewer
+  - local: datasets-download-stats
+    title: Datasets Download Stats
   - local: datasets-data-files-configuration
     title: Data files Configuration
     sections:
