--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -223,6 +223,8 @@
       title: More ways to create Spaces
     - local: spaces-github-actions
       title: Managing Spaces with Github Actions
+    - local: spaces-circleci
+      title: Managing Spaces with CircleCI Workflows
     - local: spaces-sdks-python
       title: Custom Python Spaces
     - local: spaces-add-to-arxiv
