Added PEFT docs (#1133)
Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>
Co-authored-by: Pedro Cuenca <pedro@huggingface.co>

--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -79,6 +79,8 @@
         title: OpenCLIP
       - local: paddlenlp
         title: PaddleNLP
+      - local: peft
+        title: peft
       - local: rl-baselines3-zoo
         title: RL-Baselines3-Zoo
       - local: sample-factory
