update documentation for image datasets

--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -164,6 +164,8 @@
         title: File names and splits
       - local: datasets-manual-configuration
         title: Manual Configuration
+      - local: datasets-image
+        title: Image Dataset
 - local: spaces
   title: Spaces
   isExpanded: true
