--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -279,6 +279,8 @@
         title: How to configure OIDC with Okta in the Hub
       - local: security-sso-okta-saml
         title: How to configure SAML with Okta in the Hub
+      - local: security-sso-azure-saml
+        title: How to configure SAML with Azure in the Hub
     - local: security-malware
       title: Malware Scanning
     - local: security-pickle
