--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -243,7 +243,7 @@
       title: How to Add a Space to ArXiv
     - local: spaces-cookie-limitations
       title: Cookie limitations in Spaces
-    - local: spaces-url-query-hash
+    - local: spaces-handle-url-parameters
       title: Set URL query and hash
 - local: other
   title: Other
