add docs for giskard space

--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -216,6 +216,8 @@
         title: ChatUI on Spaces
       - local: spaces-sdks-docker-tabby
         title: Tabby on Spaces
+      - local: spaces-sdks-docker-giskard
+        title: Giskard on Spaces
   - local: spaces-embed
     title: Embed your Space
   - local: spaces-run-with-docker
