--- a/.github/workflows/model_card_consistency_reminder.yml
+++ b/.github/workflows/model_card_consistency_reminder.yml
@@ -3,7 +3,9 @@ name: Model and Dataset Card consistency reminder
 on:
   pull_request:
     paths:
-      - docs/hub/datasets-cards.md.md
+      - modelcard.md
+      - datasetcard.md
+      - docs/hub/datasets-cards.md
       - docs/hub/model-cards.md
       - docs/hub/model-card-annotated.md
 
@@ -26,10 +28,12 @@ jobs:
           message: |
             It looks like you've updated documentation related to model or dataset cards in this PR.
             Please make sure that the following files stay consistent between them:
-              - [datasets-cards.md](https://github.com/huggingface/hub-docs/blob/main/docs/hub/datasets-cards.md)
-              - [model-cards.md](https://github.com/huggingface/hub-docs/blob/main/docs/hub/model-cards.md)
-              - [model-card-annotated.md](https://github.com/huggingface/hub-docs/blob/main/docs/hub/model-card-annotated.md)
-              - [modelcard_template.md](https://github.com/huggingface/huggingface_hub/blob/main/src/huggingface_hub/templates/modelcard_template.md) (`huggingface_hub` repo)
-              - [repocard.py](https://github.com/huggingface/huggingface_hub/blob/main/src/huggingface_hub/repocard.py) (`huggingface_hub` repo)
+              - [modelcard.md](https://github.com/huggingface/hub-docs/blob/main/modelcard.md)
+              - [docs/hub/model-cards.md](https://github.com/huggingface/hub-docs/blob/main/docs/hub/model-cards.md)
+              - [docs/hub/model-card-annotated.md](https://github.com/huggingface/hub-docs/blob/main/docs/hub/model-card-annotated.md)
+              - [src/.../modelcard_template.md](https://github.com/huggingface/huggingface_hub/blob/main/src/huggingface_hub/templates/modelcard_template.md) (`huggingface_hub` repo)
+              - [src/.../repocard.py](https://github.com/huggingface/huggingface_hub/blob/main/src/huggingface_hub/repocard.py) (`huggingface_hub` repo)
+              - [datasetcard.md](https://github.com/huggingface/hub-docs/blob/main/datasetcard.md)
+              - [docs/hub/datasets-cards.md](https://github.com/huggingface/hub-docs/blob/main/docs/hub/datasets-cards.md)
           pr_number: ${{ steps.github-context.outputs.pr_number }}
           GITHUB_TOKEN: ${{ secrets.comment_bot_token }}
