Add BERTopic docs

--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -61,6 +61,8 @@
         title: Adapter Transformers
       - local: allennlp
         title: AllenNLP
+      - local: bertopic
+        title: BERTopic
       - local: asteroid
         title: Asteroid
       - local: diffusers
