adding unity-sentis to docs

--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -107,6 +107,8 @@
         title: Transformers
       - local: transformers-js
         title: Transformers.js
+      - local: unity-sentis
+        title: Unity Sentis
   - local: models-widgets
     title: Model Widgets
     sections:
