--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -271,6 +271,8 @@
         title: Audit Logs
       - local: storage-regions
         title: Storage Regions
+      - local: enterprise-hub-datasets
+        title: Dataset viewer for Private datasets
   - local: billing
     title: Billing
   - local: security
