--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -280,6 +280,8 @@
     sections:
     - local: security-tokens
       title: User Access Tokens
+    - local: security-two-factor-authentication
+      title: Two-Factor Authentication
     - local: security-git-ssh
       title: Git over SSH
     - local: security-gpg
