--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -280,8 +280,8 @@
     sections:
     - local: security-tokens
       title: User Access Tokens
-    - local: security-two-fa
-      title: Two-Factor Authentication
+    - local: security-mfa
+      title: Multiple-Factor Authentication
     - local: security-git-ssh
       title: Git over SSH
     - local: security-gpg
