Two-factor authentication (#1210)
* Two-factor doc

* add to toctree

* some reformatting

* Apply suggestions from code review

Co-authored-by: Pierric Cistac <Pierrci@users.noreply.github.com>

* Remove support line, rename file

* simplify intro

* Suggestions

Co-authored-by: Pedro Cuenca <pedro@huggingface.co>

* add images

* 2fa -> mfa

* Revert "2fa -> mfa"

This reverts commit dc2ff8dd266179f4ce597464bc2e5a40e9f5a260.

* Update docs/hub/security-two-fa.md

Co-authored-by: Pierric Cistac <Pierrci@users.noreply.github.com>

* add link to subpage

---------

Co-authored-by: Pierric Cistac <Pierrci@users.noreply.github.com>
Co-authored-by: Pedro Cuenca <pedro@huggingface.co>

--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -282,6 +282,8 @@
     sections:
     - local: security-tokens
       title: User Access Tokens
+    - local: security-two-fa
+      title: Two-Factor Authentication
     - local: security-git-ssh
       title: Git over SSH
     - local: security-gpg
