--- a/docs/hub/_redirects.yml
+++ b/docs/hub/_redirects.yml
@@ -15,3 +15,4 @@ how-to-inference: /docs/huggingface_hub/how-to-inference
 searching-the-hub: /docs/huggingface_hub/searching-the-hub
 # end of first_section
 api-webhook: webhooks
+security-two-fa: security-2fa
