Update library docs: adapter-transformers -> adapters (#1184)
* Update library docs: `adapter-transformers` -> `adapters`

* Update ToC and overview page.

* Add redirect to "adapters"

* Update adapters.md

--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -57,8 +57,8 @@
   - local: models-libraries
     title: Integrated Libraries
     sections:
-      - local: adapter-transformers
-        title: Adapter Transformers
+      - local: adapters
+        title: Adapters
       - local: allennlp
         title: AllenNLP
       - local: bertopic
